--- a/public/scss/main.sass
+++ b/public/scss/main.sass
@@ -3,9 +3,8 @@
 @import 'home';
 @import 'contact';
 @import 'rotation';
-@import 'play-info';
 @import 'background';
 @import 'blackjack';
-@import 'war';
+// @import 'war';
 @import 'baccarat';
-@import 'poker';
+@import 'play-info';
