--- a/public/scss/main.sass
+++ b/public/scss/main.sass
@@ -1,10 +1,14 @@
 @import 'curtain';
 @import 'nav';
 @import 'home';
+@import 'footer';
+@import 'account';
 @import 'contact';
+@import 'rankings';
 @import 'rotation';
 @import 'background';
 @import 'blackjack';
-// @import 'war';
+@import 'war';
 @import 'baccarat';
 @import 'play-info';
+@import 'log-info';
