--- a/public/scss/_blackjack.scss
+++ b/public/scss/_blackjack.scss
@@ -9,8 +9,14 @@
 
     .blackjack {
 
-        .main {
+        &__main {
             display: block;
+            filter: blur(1px);
+            pointer-events: none;
+
+            .main--blured {
+                animation: blurWindow 2s linear 1s both;
+            }
 
             .play {
 
@@ -90,51 +96,18 @@
     }
 }
 
-@keyframes showAiCard {
+@keyframes blurWindow {
     0% {
-        top: 5%;
-        left: 70%;
+        filter: blur(0);
+    }
+
+    30%,
+    99% {
+        filter: blur(20px);
     }
 
     100% {
-        top: 5%;
-        left: 45%
-    }
-}
-
-@keyframes showUserCard {
-    0% {
-        top: 5%;
-        left: 70%;
-    }
-
-    100% {
-        top: 30%;
-        left: 45%
-    }
-}
-
-@keyframes hideAiCard {
-    0% {
-        top: 5%;
-        left: 45%
-    }
-
-    100% {
-        top: 5%;
-        left: 15%
-    }
-}
-
-@keyframes hideUserCard {
-    0% {
-        top: 30%;
-        left: 45%
-    }
-
-    100% {
-        top: 5%;
-        left: 15%
+        filter: blur(0);
     }
 }
 
@@ -145,21 +118,89 @@
 
     .blackjack {
 
-        .main {
+        &__main {
             display: block;
+
+            .play {
+
+                &__deck {
+                    width: 67px;
+                    height: 82px;
+
+                    &--start {
+                        width: 55px;
+                        height: 70px;
+                    }
+                }
+
+                .option-btns {
+
+                    &__btn {
+                        width: 6.5rem;
+                        height: 6.5rem;
+                        font-size: 1.7rem;
+                        letter-spacing: 2px;
+                    }
+                }
+
+                &__circle-points {
+                    width: 3rem;
+                    height: 3rem;
+
+                }
+
+                .play__points {
+                    line-height: 3rem;
+                    font-size: 1.6rem;
+                }
+            }
         }
     }
 }
 
-@media only screen and (orientation: landscape) and (min-width: 1440px) {
+@media only screen and (orientation: landscape) and (min-width: 1200px) {
     .rotate-container {
         display: none;
     }
 
     .blackjack {
 
-        .main {
+        &__main {
             display: block;
+
+            .play {
+
+                &__deck {
+                    width: 77px;
+                    height: 92px;
+
+                    &--start {
+                        width: 65px;
+                        height: 80px;
+                    }
+                }
+
+                .option-btns {
+
+                    &__btn {
+                        width: 6.5rem;
+                        height: 6.5rem;
+                        font-size: 1.7rem;
+                        letter-spacing: 2px;
+                    }
+                }
+
+                &__circle-points {
+                    width: 3rem;
+                    height: 3rem;
+
+                }
+
+                .play__points {
+                    line-height: 3rem;
+                    font-size: 1.6rem;
+                }
+            }
         }
     }
 }
