--- a/public/scss/_curtain.scss
+++ b/public/scss/_curtain.scss
@@ -20,7 +20,7 @@ body {
     overflow: hidden;
     display: flex;
     z-index: 1;
-    display: none;
+    // display: none;
 
     &__site {
         flex-basis: 50%;
