--- a/public/scss/_baccarat.scss
+++ b/public/scss/_baccarat.scss
@@ -1,22 +1,16 @@
-.baccarat__main {
+.baccarat {
     display: none;
 }
 
-@media only screen and (orientation: landscape) and (min-height: 360px) {
+@media only screen and (orientation: landscape) {
     .rotate-container {
         display: none;
     }
 
     .baccarat {
+        display: block;
 
-        &__main {
-            display: block;
-            filter: blur(1px);
-            pointer-events: none;
-
-            .main--blured {
-                animation: blurWindow 2s linear 1s both;
-            }
+        .main {
 
             .play {
 
@@ -121,14 +115,9 @@
 }
 
 @media only screen and (orientation: landscape) and (min-height: 768px) {
-    .rotate-container {
-        display: none;
-    }
-
     .baccarat {
 
-        &__main {
-            display: block;
+        .main {
 
             .play {
 
@@ -168,14 +157,9 @@
 }
 
 @media only screen and (orientation: landscape) and (min-width: 1440px) {
-    .rotate-container {
-        display: none;
-    }
-
     .baccarat {
 
-        &__main {
-            display: block;
+        .main {
 
             .play {
 
